Menu: Increased z-index of open sub-menus from 100 to 500 (fixes #4315)

--- a/src/plugins/menu/menu.scss
+++ b/src/plugins/menu/menu.scss
@@ -28,7 +28,7 @@
 			max-height: 1000px;
 			display: inline;
 			position: absolute;
-			z-index: 100;
+			z-index: 500;
 			text-transform: none;
 			top: auto;
 			li {
